Fix ProductListPage.js to be wrapped

--- a/src/include/Cgv.css
+++ b/src/include/Cgv.css
@@ -1,7 +1,6 @@
 .containerTot {
   margin-top: 2%;
   margin-bottom: 2%;
-  border: solid;
   font-family: monospace;
   font-size: 17px;
 }
@@ -21,6 +20,15 @@ h2 {
 
 .container {
   margin-bottom: 3%;
+}
+
+.col-12 {
+  text-align: right;
+  margin-top: 1%;
+}
+
+.filter {
+  margin-right: 2%;
 }
 
 /*# sourceMappingURL=Cgv.css.map */
